# llm_rag_bot

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: endpoints.py
app/core/: config.py
app/schemas/: rag.py
app/services/: llm.py  rag_service.py  vectorstore.py
app/utils/: text.py
chroma_db/: chroma.sqlite3
data/: parser.py  python_faq_dataset.jsonl  python_faq_dataset_enhanced.jsonl
ingestion/: rag_data.py
mlflow/268632636173648761/: meta.yaml
mlflow/268632636173648761/f668283efd6542848063a89aeece94a5/: meta.yaml
mlflow/268632636173648761/f668283efd6542848063a89aeece94a5/metrics/: metric_example
mlflow/268632636173648761/f668283efd6542848063a89aeece94a5/params/: system
mlflow/268632636173648761/f668283efd6542848063a89aeece94a5/tags/: mlflow.runName
notebooks/: llm_rag_bot.ipynb
scripts/: query_rag.py
src/: mlflow_test.py
